--- a/index.html
+++ b/index.html
@@ -192,27 +192,15 @@ $(document).ready(function () {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    <span class="fa fa-gear"></span>
+    <span class="fa fa fa fa-align-justify"></span>
      
-    More
+    Produtos
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Heading 1</li>
     <li>
-      <a href="page_a.html">Page A</a>
-    </li>
-    <li>
-      <a href="page_b.html">Page B</a>
-    </li>
-    <li class="divider"></li>
-    <li class="dropdown-header">Heading 2</li>
-    <li>
-      <a href="page_c.html">Page C</a>
-    </li>
-    <li>
-      <a href="page_d.html">Page D</a>
+      <a href="page_a.html">ERA-20C</a>
     </li>
   </ul>
 </li>
