Caminh completo para https://lordsyberian.github.io/vender/img

--- a/vender/index.html
+++ b/vender/index.html
@@ -84,7 +84,7 @@ let example1 = Vue.createApp({
   <div class="card-group gap-3" id="cardsgroup">
   <div v-for="item in items" v-bind:class="'card p-3 '+item.classe" v-show="item.mostrar">
   <p class="card-text"><strong>{{ item.produto }}</strong></p>
-  <img class="card-img-top" v-bind:src="'/img/'+ item.codigo +'_01.jpeg'">
+  <img class="card-img-top" v-bind:src="'https://lordsyberian.github.io/vender/img/'+ item.codigo +'_01.jpeg'">
   <p class="card-text">{{ item.descricao }}</p>
   <p class="card-text"><strong>Valor: {{ item.valor }}</strong></p>
   <p class="card-text">Ano: {{ item.ano }}</p>
@@ -103,25 +103,25 @@ let example1 = Vue.createApp({
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                <img v-bind:src="'/img/'+ code +'_01.jpeg'" class="d-block w-100" alt="...">
+                <img v-bind:src="'https://lordsyberian.github.io/vender/img/'+ code +'_01.jpeg'" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img v-bind:src="'/img/'+ code +'_02.jpeg'" class="d-block w-100" alt="...">
+                <img v-bind:src="'https://lordsyberian.github.io/vender/img/'+ code +'_02.jpeg'" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img v-bind:src="'/img/'+ code +'_03.jpeg'" class="d-block w-100" alt="...">
+                <img v-bind:src="'https://lordsyberian.github.io/vender/img/'+ code +'_03.jpeg'" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img v-bind:src="'/img/'+ code +'_04.jpeg'" class="d-block w-100" alt="...">
+                <img v-bind:src="'https://lordsyberian.github.io/vender/img/'+ code +'_04.jpeg'" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img v-bind:src="'/img/'+ code +'_05.jpeg'" class="d-block w-100" alt="...">
+                <img v-bind:src="'https://lordsyberian.github.io/vender/img/'+ code +'_05.jpeg'" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img v-bind:src="'/img/'+ code +'_06.jpeg'" class="d-block w-100" alt="...">
+                <img v-bind:src="'https://lordsyberian.github.io/vender/img/'+ code +'_06.jpeg'" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img v-bind:src="'/img/'+ code +'_07.jpeg'" class="d-block w-100" alt="...">
+                <img v-bind:src="'https://lordsyberian.github.io/vender/img/'+ code +'_07.jpeg'" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
