--- a/vender/index.html
+++ b/vender/index.html
@@ -23,11 +23,16 @@ line-height: 1;
 background-color: rgba(86,61,124,0.15);
 border: 1px solid rgba(86,61,124,0.15);
 }
+.card-group {
+    flex-wrap: wrap;
+}
+
 .card-group .card {
 min-width: 25%;
-max-width: 50%;
+max-width: 100%;
 }
 .card-text {
+  display: flex;
   margin-top: auto;
   text-align: center;
   color:#666666;
