--- a/vender/index.html
+++ b/vender/index.html
@@ -139,7 +139,7 @@ let example1 = Vue.createApp({
             </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary"  v-on:click="setModal($event)">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
     </div>
     </div>
 </div>
